@@ -1,9 +1,8 @@
 package org.example.framework.out.http;
 
-import org.apache.commons.io.IOUtils;
+import jakarta.inject.Singleton;
 import org.example.application.out.TimeService;
 import org.example.domain.TransferTestResult;
-import org.example.framework.out.Util;
 
 import java.io.*;
 import java.net.HttpURLConnection;
@@ -11,15 +10,18 @@ import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Objects;
 
+@Singleton
 public class HttpPostClient {
 
-    public static final String CONTENT_LENGTH = "Content-Length";
-    private static final String POST = "POST";
-
+    private final Properties properties;
     private final HttpClient httpClient;
     private final TimeService timeService;
 
-    public HttpPostClient(HttpClient httpClient, TimeService timeService) {
+    public HttpPostClient(
+            Properties properties,
+            HttpClient httpClient,
+            TimeService timeService) {
+        this.properties = properties;
         this.httpClient = httpClient;
         this.timeService = timeService;
     }
@@ -27,19 +29,19 @@ public class HttpPostClient {
     public TransferTestResult partialPostUploadData(URI uri, long timeoutTime, String dataString) {
         Objects.requireNonNull(uri);
         Objects.requireNonNull(dataString);
-        final int maxBufferSize = Integer.parseInt(Objects.requireNonNull(Util.getConfigProperty("Upload.maxBufferSize")));
+        int maxBufferSize = properties.upload().maxBufferSize();
         int bytesSent = 0;
         try (InputStream is = new ByteArrayInputStream(dataString.getBytes())) {
-            final HttpURLConnection conn = httpClient.createConnection(uri, POST);
+            HttpURLConnection conn = httpClient.createConnection(uri, RequestMethod.POST);
             conn.setChunkedStreamingMode(maxBufferSize);
             conn.setDoOutput(true);
-            conn.setRequestProperty(CONTENT_LENGTH, Integer.toString(dataString.length()));
-            final long startTime = timeService.currentTimeMillis();
-            final DataOutputStream dos = new DataOutputStream(conn.getOutputStream());
+            conn.setRequestProperty(RequestProperty.CONTENT_LENGTH.value(), Integer.toString(dataString.length()));
+            long startTime = timeService.currentTimeMillis();
+            DataOutputStream dos = new DataOutputStream(conn.getOutputStream());
 
             int bytesAvailable = is.available();
             int bufferSize = Math.min(bytesAvailable, maxBufferSize);
-            final byte[] buffer = new byte[bufferSize];
+            byte[] buffer = new byte[bufferSize];
             int bytesRead = 1;
             while (bytesRead > 0) {
                 if (timeoutTime > 0 && timeService.currentTimeMillis() > timeoutTime) {
@@ -53,9 +55,10 @@ public class HttpPostClient {
                     bytesSent = bytesSent + bytesRead;
                 }
             }
+            var duartionInMs = timeService.currentTimeMillis() - startTime;
             dos.flush();
             dos.close();
-            return new TransferTestResult(0d, bytesSent, timeService.currentTimeMillis() - startTime);
+            return new TransferTestResult(bytesSent, duartionInMs);
         } catch (IOException e) {
             throw new ServerRequestException(e);
         }
@@ -65,17 +68,18 @@ public class HttpPostClient {
         Objects.requireNonNull(uri);
         Objects.requireNonNull(encodedBody);
         try {
-            final HttpURLConnection conn = httpClient.createConnection(uri, POST);
+            HttpURLConnection conn = httpClient.createConnection(uri, RequestMethod.POST);
             conn.setDoOutput(true);
-            conn.setRequestProperty(CONTENT_LENGTH, Integer.toString(encodedBody.length()));
-            conn.setRequestProperty("Referer", "http://c.speedtest.net/flash/speedtest.swf");
-            conn.addRequestProperty("Content-Type", "application/x-www-form-urlencoded");
+            conn.setRequestProperty(RequestProperty.CONTENT_LENGTH.value(), Integer.toString(encodedBody.length()));
+            conn.setRequestProperty(RequestProperty.REFERER.value(), properties.upload().referer());
+            conn.addRequestProperty(RequestProperty.CONTENT_TYPE.value(), properties.upload().contentType());
             try (OutputStream os = conn.getOutputStream();
-                 BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(os, StandardCharsets.UTF_8))) {
+                 OutputStreamWriter osw = new OutputStreamWriter(os, StandardCharsets.UTF_8);
+                 BufferedWriter writer = new BufferedWriter(osw)) {
                 writer.write(encodedBody);
                 writer.flush();
                 try (InputStream is = conn.getInputStream()) {
-                    return IOUtils.toString(is, StandardCharsets.UTF_8);
+                    return new String(is.readAllBytes(), StandardCharsets.UTF_8);
                 }
             }
         } catch (IOException e) {
