@@ -1,13 +1,15 @@
 package org.example.framework.out.server;
 
-import jakarta.xml.bind.JAXBContext;
+import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.xml.bind.JAXBException;
-import jakarta.xml.bind.Unmarshaller;
 import org.example.application.out.ServerService;
+import org.example.domain.Distance;
 import org.example.domain.Server;
 import org.example.framework.out.config.ParsingException;
 import org.example.framework.out.http.HttpGetClient;
 import org.example.framework.out.http.ServerRequestException;
+import org.example.framework.out.server.model.Settings;
+import org.example.framework.out.xml.Context;
 import org.example.util.Objectz;
 
 import java.io.ByteArrayInputStream;
@@ -17,24 +19,26 @@ import java.net.URI;
 import java.util.*;
 import java.util.stream.Collectors;
 
+@ApplicationScoped
 public class ServerServiceImpl implements ServerService {
 
+    private final Properties properties;
     private final HttpGetClient httpGetClient;
+    private final Context context;
 
-    public ServerServiceImpl(HttpGetClient httpGetClient) {
+    public ServerServiceImpl(
+            Properties properties,
+            HttpGetClient httpGetClient,
+            Context context) {
+        this.properties = properties;
         this.httpGetClient = httpGetClient;
+        this.context = context;
     }
-
-    private static final Set<URI> SERVER_URLS = Set.of(
-            URI.create("https://www.speedtest.net/speedtest-servers-static.php"),
-            URI.create("http://c.speedtest.net/speedtest-servers-static.php"),
-            URI.create("https://www.speedtest.net/speedtest-servers.php"),
-            URI.create("http://c.speedtest.net/speedtest-servers.php"));
 
     @Override
     public List<Server> servers(int threadsPerUrl) {
         Objectz.require(threadsPerUrl > 0);
-        return SERVER_URLS.stream()
+        return properties.baseUri().stream()
                 .map(base -> {
                     try {
                         String s = "%s?threads=%d".formatted(base, threadsPerUrl);
@@ -46,23 +50,29 @@ public class ServerServiceImpl implements ServerService {
                     }
                 })
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .distinct()
+                .toList();
     }
 
     private List<Server> getServersFromXml(byte[] bytes) {
         Objects.requireNonNull(bytes);
         try (InputStream is = new ByteArrayInputStream(bytes)) {
-            JAXBContext jaxbContext = JAXBContext.newInstance(ServerSetting.class);
-            Unmarshaller jaxbUnmarshaller = jaxbContext.createUnmarshaller();
-            ServerSetting serverSetting = (ServerSetting) jaxbUnmarshaller.unmarshal(is);
-            return serverSetting.getServers().getServerList().stream()
-                    .map(org.example.framework.out.server.Server::toDomain)
+            Settings settings = context.unmarshal(is, Settings.class);
+            return settings.servers.server.stream()
+                    .map(org.example.framework.out.server.model.Server::toDomain)
                     .filter(Optional::isPresent)
                     .map(Optional::get)
                     .toList();
         } catch (IOException | JAXBException e) {
             throw new ParsingException(e);
         }
+    }
+
+    @Override
+    public Map<Distance, Server> limit(TreeMap<Distance, Server> treeMap) {
+        return treeMap.entrySet().stream()
+                .limit(properties.limit())
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
     }
 
 }
